CH: Fixing padding and spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -145,11 +145,10 @@ a {
 
 .navbar {
   display: flex;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   bottom: 0;
   justify-content: center !important;
-  width: 100%;
   background-color: var(--nav-bar);
   box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.2);
   gap: 8px;
@@ -167,7 +166,7 @@ a {
 
 .heading {
   margin-bottom: 0%;
-  margin-left: 5%;
+  padding-left: 5%;
   padding-top: 16px;
   font-weight: 600;
   font-size: 48px;
